compiler/testData/diagnostics/tests/objects/ObjectsInheritance.kt
package toplevelObjectDeclarations

object CObj {}

object DOjb : <!SINGLETON_IN_SUPERTYPE!>CObj<!> {}
